--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -3,163 +3,178 @@
     ViewData["Title"] = "Index";
     Layout = "_LudoLayout";
 }
-    <div></div>
-    <div class="gameInfo">
+<div></div>
+<div class="gameInfo">
 
-        <div class="currentPlayer">player1</div>
-        <div class="dice">
-            <div class="diceDot" id="center"></div>
-            <div class="diceDot" id="leftUpper"></div>
-            <div class="diceDot" id="leftMiddel"></div>
-            <div class="diceDot" id="leftLower"></div>
-            <div class="diceDot" id="rightUpper"></div>
-            <div class="diceDot" id="rightMiddel"></div>
-            <div class="diceDot" id="rightLower"></div>
-        </div>
-        <button type="button" id="button1">New Game!</button>
-        <button type="button" id="button2">Continue Game!</button>
-        <button type="button" id="button3">Delete Game!</button>
+    <div class="currentPlayer">player1</div>
+    <div class="dice">
+        <div class="diceDot" id="center"></div>
+        <div class="diceDot" id="leftUpper"></div>
+        <div class="diceDot" id="leftMiddel"></div>
+        <div class="diceDot" id="leftLower"></div>
+        <div class="diceDot" id="rightUpper"></div>
+        <div class="diceDot" id="rightMiddel"></div>
+        <div class="diceDot" id="rightLower"></div>
     </div>
-    <div class="board">
-        <div class="wing" id="leftWing">
-            <div class="field"></div>
-            <div class="field player2"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field player2"></div>
-            <div class="field player2"></div>
-            <div class="field player2"></div>
-            <div class="field player2"></div>
-            <div class="field player2"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-        </div>
-        <div class="wing" id="rightWing">
-            <div class="field"></div>
-            <div class="field player3"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field player3"></div>
-            <div class="field player3"></div>
-            <div class="field player3"></div>
-            <div class="field player3"></div>
-            <div class="field player3"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-        </div>
-        <div class="wing" id="topWing">
-            <div class="field"></div>
-            <div class="field player4"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field player4"></div>
-            <div class="field player4"></div>
-            <div class="field player4"></div>
-            <div class="field player4"></div>
-            <div class="field player4"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-        </div>
-        <div class="wing" id="bottomWing">
-            <div class="field"></div>
-            <div class="field player1"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field player1"></div>
-            <div class="field player1"></div>
-            <div class="field player1"></div>
-            <div class="field player1"></div>
-            <div class="field player1"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-            <div class="field"></div>
-        </div>
+    <button type="button" id="button1">New Game!</button>
+    <button type="button" id="button2">Continue Game!</button>
+    <button type="button" id="button3">Delete Game!</button>
+</div>
+<div class="board">
+    <div class="wing" id="leftWing">
+        <div class="field"></div>
+        <div class="field player2"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field player2"></div>
+        <div class="field player2"></div>
+        <div class="field player2"></div>
+        <div class="field player2"></div>
+        <div class="field player2"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+    </div>
+    <div class="wing" id="rightWing">
+        <div class="field"></div>
+        <div class="field player3"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field player3"></div>
+        <div class="field player3"></div>
+        <div class="field player3"></div>
+        <div class="field player3"></div>
+        <div class="field player3"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+    </div>
+    <div class="wing" id="topWing">
+        <div class="field"></div>
+        <div class="field player4"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field player4"></div>
+        <div class="field player4"></div>
+        <div class="field player4"></div>
+        <div class="field player4"></div>
+        <div class="field player4"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+    </div>
+    <div class="wing" id="bottomWing">
+        <div class="field"></div>
+        <div class="field player1"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field player1"></div>
+        <div class="field player1"></div>
+        <div class="field player1"></div>
+        <div class="field player1"></div>
+        <div class="field player1"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+        <div class="field"></div>
+    </div>
 
-        <div class="goal"></div>
-        <div class="start player1">
+    <div class="goal"></div>
+    <div class="start player1">
 
-            <div class="field">
-                <div class="brick player1"></div>
-            </div>
-            <div class="field">
-                <div class="brick player1"></div>
-            </div>
-            <div class="field">
-                <div class="brick player1"></div>
-            </div>
-            <div class="field">
-                <div class="brick player1"></div>
-            </div>
+        <div class="field">
+            <div class="brick player1"></div>
         </div>
-
-        <div class="start player2">
-            <div class="field">
-                <div class="brick player2"></div>
-            </div>
-            <div class="field">
-                <div class="brick player2"></div>
-            </div>
-            <div class="field">
-                <div class="brick player2"></div>
-            </div>
-            <div class="field">
-                <div class="brick player2"></div>
-            </div>
+        <div class="field">
+            <div class="brick player1"></div>
         </div>
-        <div class="start player3">
-            <div class="field">
-                <div class="brick player3"></div>
-            </div>
-            <div class="field">
-                <div class="brick player3"></div>
-            </div>
-            <div class="field">
-                <div class="brick player3"></div>
-            </div>
-            <div class="field">
-                <div class="brick player3"></div>
-            </div>
+        <div class="field">
+            <div class="brick player1"></div>
         </div>
-        <div class="start player4">
-            <div class="field">
-                <div class="brick player4"></div>
-            </div>
-            <div class="field">
-                <div class="brick player4"></div>
-            </div>
-            <div class="field">
-                <div class="brick player4"></div>
-            </div>
-            <div class="field">
-                <div class="brick player4"></div>
-            </div>
+        <div class="field">
+            <div class="brick player1"></div>
         </div>
     </div>
+
+    <div class="start player2">
+        <div class="field">
+            <div class="brick player2"></div>
+        </div>
+        <div class="field">
+            <div class="brick player2"></div>
+        </div>
+        <div class="field">
+            <div class="brick player2"></div>
+        </div>
+        <div class="field">
+            <div class="brick player2"></div>
+        </div>
+    </div>
+    <div class="start player3">
+        <div class="field">
+            <div class="brick player3"></div>
+        </div>
+        <div class="field">
+            <div class="brick player3"></div>
+        </div>
+        <div class="field">
+            <div class="brick player3"></div>
+        </div>
+        <div class="field">
+            <div class="brick player3"></div>
+        </div>
+    </div>
+    <div class="start player4">
+        <div class="field">
+            <div class="brick player4"></div>
+        </div>
+        <div class="field">
+            <div class="brick player4"></div>
+        </div>
+        <div class="field">
+            <div class="brick player4"></div>
+        </div>
+        <div class="field">
+            <div class="brick player4"></div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+    $("#button1").click(function () {
+        $.ajax({
+            type: 'get',
+            url: '/newgame',
+            success: function (data) {
+                alert(data);
+            },
+            timeout: 5000
+        })
+    })
+    </script>
+}
 
