--- a/LudoBrowser/Views/Shared/_LudoLayout.cshtml
+++ b/LudoBrowser/Views/Shared/_LudoLayout.cshtml
@@ -16,5 +16,7 @@
     </head>
     <body>
         @RenderBody()
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        @RenderSection("Scripts", false)
     </body>
 </html>
