--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -6,7 +6,7 @@
 <div></div>
 <div class="gameInfo">
 
-    <div class="currentPlayer">player1</div>
+    <div class="currentPlayer"><b>LUDO</b></div>
     <div class="dice">
         <div class="diceDot" id="center"></div>
         <div class="diceDot" id="leftUpper"></div>
@@ -16,9 +16,8 @@
         <div class="diceDot" id="rightMiddel"></div>
         <div class="diceDot" id="rightLower"></div>
     </div>
-    <button type="button" id="button1">New Game!</button>
-    <button type="button" id="button2">Continue Game!</button>
-    <button type="button" id="button3">Delete Game!</button>
+    <button type="button" id="button1">ROLL DICE</button>
+    <button type="button" id="button2">???</button>
 </div>
 <div class="board">
     <div class="wing" id="leftWing">
