--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="diceDot" id="rightMiddel"></div>
         <div class="diceDot" id="rightLower"></div>
     </div>
-    <button type="button" id="button1">ROLL DICE</button>
+    <button type="button" id="button1">ROLL DICE!</button>
     <button type="button" id="button2">???</button>
 </div>
 <div class="board">
@@ -169,7 +169,7 @@
             type: 'get',
             url: '/newgame',
             success: function (data) {
-                alert(data);
+                alert("this worked");
             },
             timeout: 5000
         })
