--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -16,8 +16,19 @@
         <div class="diceDot" id="rightMiddel"></div>
         <div class="diceDot" id="rightLower"></div>
     </div>
-    <button type="button" id="button1">ROLL DICE!</button>
-    <button type="button" id="button2">???</button>
+    <button type="button" id="button1">START GAME</button>
+    <button type="button" id="button2">SAVE GAME!</button>
+    <input type="checkbox" id="Red">
+    <input type="checkbox" id="Blue">
+    <input type="checkbox" id="Green">
+    <input type="checkbox" id="Orange">
+    <label for="RedLabel" id="RedLabel"><b>R &nbsp;</b></label>
+    <label for="BlueLabel" id="BlueLabel"><b>B &nbsp;</b></label>
+    <label for="GreenLabel" id="GreenLabel"><b>G &nbsp;</b></label>
+    <label for="OrangeLabel" id="OrangeLabel"><b>O &nbsp;</b></label>
+    <input class="form-control" id="PlayerName" type="text" value="" />
+    <label for="Name" id="Name">Write Name and Color</label>
+
 </div>
 <div class="board">
     <div class="wing" id="leftWing">
