--- a/LudoBrowser/Views/Ludo/Welcome.cshtml
+++ b/LudoBrowser/Views/Ludo/Welcome.cshtml
@@ -28,7 +28,7 @@
                     Press below to start a new game with a minimum of 2
                     and a maximum of 4 players!
                 </p>
-                <button type="button" id="button1">New Game!</button>
+                <button type="button" id="button1">JOIN LOBBY!</button>
             </div>
 
             <div class="col-sm-4">
