--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -1,13 +1,17 @@
-﻿
+﻿@model LudoBrowser.Models.LudoPlayer
+
 @{
     ViewData["Title"] = "Index";
     Layout = "_LudoLayout";
 }
+
+
 <div></div>
 <div class="gameInfo">
 
+
     <div class="currentPlayer"><b>LUDO</b></div>
-    <div class="dice">
+    <div class="dice" style= "position:absolute; left:80px; top:400px";>
         <div class="diceDot" id="center"></div>
         <div class="diceDot" id="leftUpper"></div>
         <div class="diceDot" id="leftMiddel"></div>
@@ -18,16 +22,12 @@
     </div>
     <button type="button" id="button1">START GAME</button>
     <button type="button" id="button2">SAVE GAME!</button>
-    <input type="checkbox" id="Red">
-    <input type="checkbox" id="Blue">
-    <input type="checkbox" id="Green">
-    <input type="checkbox" id="Orange">
-    <label for="RedLabel" id="RedLabel"><b>R &nbsp;</b></label>
-    <label for="BlueLabel" id="BlueLabel"><b>B &nbsp;</b></label>
-    <label for="GreenLabel" id="GreenLabel"><b>G &nbsp;</b></label>
-    <label for="OrangeLabel" id="OrangeLabel"><b>O &nbsp;</b></label>
-    <input class="form-control" id="PlayerName" type="text" value="" />
-    <label for="Name" id="Name">Write Name and Color</label>
+
+
+    <label for="Name" id="Name1">Choose your Color, Name and ID!</label>
+
+
+   
 
 </div>
 <div class="board">
