--- a/LudoBrowser/Views/Ludo/Index.cshtml
+++ b/LudoBrowser/Views/Ludo/Index.cshtml
@@ -11,7 +11,7 @@
 
 
     <div class="currentPlayer"><b>LUDO</b></div>
-    <div class="dice" style= "position:absolute; left:80px; top:400px";>
+    <div class="dice" style="position:absolute; left:80px; top:400px" ;>
         <div class="diceDot" id="center"></div>
         <div class="diceDot" id="leftUpper"></div>
         <div class="diceDot" id="leftMiddel"></div>
@@ -24,10 +24,22 @@
     <button type="button" id="button2">SAVE GAME!</button>
 
 
-    <label for="Name" id="Name1">Choose your Color, Name and ID!</label>
-
+    <form method="POST">
+        <label for="firstName">Your first name</label>
+        <input type="text" id="firstName" placeholder="Your name goes here" />
+        <input type="submit" />
+    </form>
 
    
+
+    <form action="/Form" method="post">
+        <label for="FirstName">First Name</label>
+        <input placeholder="Your name goes here" type="text" id="FirstName" name="FirstName" value="">
+        <input type="submit">
+        <input name="__RequestVerificationToken" type="hidden" value="<token_generated_here>">
+    </form>
+
+
 
 </div>
 <div class="board">
