--- a/LudoBrowser/Views/Shared/_LudoLayout.cshtml
+++ b/LudoBrowser/Views/Shared/_LudoLayout.cshtml
@@ -5,18 +5,21 @@
 
 
 
-    <!DOCTYPE html>
+<!DOCTYPE html>
 
-    <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>LudoLayout</title>
-        <link href="~/css/reset.css" rel="stylesheet" />
-        <link href="~/css/LudoStyle.css" rel="stylesheet" />
-    </head>
-    <body>
-        @RenderBody()
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        @RenderSection("Scripts", false)
-    </body>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>LudoLayout</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <link href="~/css/reset.css" rel="stylesheet" />
+    <link href="~/css/LudoStyle.css" rel="stylesheet" />
+
+</head>
+<body>
+    @RenderBody()
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    @RenderSection("Scripts", false)
+</body>
 </html>
