--- a/LudoBrowser/Views/Ludo/Welcome.cshtml
+++ b/LudoBrowser/Views/Ludo/Welcome.cshtml
@@ -28,8 +28,8 @@
                     Press below to start a new game with a minimum of 2
                     and a maximum of 4 players!
                 </p>
-                @*<button type="button" id="button1">JOIN LOBBY!</button>*@ 
-                <form asp-action="Index" asp-controller="Ludo">
+                @*<button type="button" id="button1">JOIN LOBBY!</button>*@
+                <form asp-action="Board" asp-controller="Ludo">
                     <div>
                         <input asp-for="Name" type="text" placeholder="Your name here" />
                     </div>
@@ -80,7 +80,26 @@
 </body>
 </html>
 
-@section Scripts {
+
+@*@section scripts {
+        <script>
+            $("#PlayerButton").click(function () {
+                $.ajax({
+                    type: 'get',
+                    url: '/newgame',
+                    success: function (data) {
+                        console.log("New Game Created");
+                    },
+                    timeout: 5000
+                })
+            })
+        </script>
+    }*@
+
+
+
+
+@*@section Scripts {
     <script>
         document.getElementById("PlayerButton").onclick = function () {
 
@@ -88,7 +107,7 @@
             window.alert("Redirecting to game lobby!");
 
         }
-    </script>
+    </script>*@
 }
 
 @*@section Scripts {
