--- a/LudoBrowser/Views/_ViewImports.cshtml
+++ b/LudoBrowser/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LudoBrowser
 @using LudoBrowser.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.ComponentModel.DataAnnotations;
