--- a/LudoBrowser/Views/Ludo/GameInformation.cshtml
+++ b/LudoBrowser/Views/Ludo/GameInformation.cshtml
@@ -31,19 +31,19 @@
     <div id="Input">
         <form action="/startgame/@Html.DisplayFor(model => model.GameId)" method="get">
             <div class="form-group">
-                <label for="exampleInputEmail1">Player 1 Name</label>
+                <label for="exampleInputEmail1">RED PLAYER</label>
                 <input type="text" class="form-control name" name="name1" placeholder="Enter Name">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Player 2 Name</label>
+                <label for="exampleInputEmail1">YELLOW PLAYER</label>
                 <input type="text" class="form-control name" name="name2" placeholder="Enter Name">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Player 3 Name</label>
+                <label for="exampleInputEmail1">GREEN PLAYER</label>
                 <input type="text" class="form-control name" name="name3" placeholder="Enter Name">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Player 4 Name</label>
+                <label for="exampleInputEmail1">BLUE PLAYER</label>
                 <input type="text" class="form-control name" name="name4" placeholder="Enter Name">
             </div>
             <button type="submit" id="newgame" class="btn btn-success">Enter into the Game</button>
